# verdict-evm

./: Cargo.toml  README.md
src/: main.rs
