[package]
name = "verdict"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "time"] }
ethers = { version = "2.0", features = ["ws", "ipc", "rustls"] }
colored = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"  # <--- A NOVA ARMA
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "verdict"
path = "src/main.rs"