[package]
name = "verdict"
version = "1.0.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws", "ipc", "rustls"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
